--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -1,6 +1,10 @@
-all: test_gp
+all: experiment 
 
-test_gp: test_gp.cpp gp.cpp kernel_function.cpp
+
+experiment: run_experiment.cpp gp.cpp kernel_function.cpp prob_util.cpp
+	g++ -Wall -std=c++11 $^ -o $@  -I ../inc/
+
+test_gp: test_gp.cpp gp.cpp kernel_function.cpp prob_util.cpp
 	g++ -Wall -std=c++11 $^ -o $@  -I ../inc/
 
 
